# file-service/gen/http/health/server/paths.go
@@ -1,0 +1,14 @@
+// Code generated by goa, DO NOT EDIT.
+//
+// HTTP request path constructors for the health service.
+//
+// Command:
+// $ goa gen github.com/aleksandarv/file-uploader/file-service/design -o
+// /Users/aleksandarvukovic/projects/file-uploader/file-service
+
+package server
+
+// HealthHealthPath returns the URL path to the health service health HTTP endpoint.
+func HealthHealthPath() string {
+	return "/health"
+}
