# file-service/gen/http/health/server/types.go
@@ -1,0 +1,94 @@
+// Code generated by goa, DO NOT EDIT.
+//
+// health HTTP server types
+//
+// Command:
+// $ goa gen github.com/aleksandarv/file-uploader/file-service/design -o
+// /Users/aleksandarvukovic/projects/file-uploader/file-service
+
+package server
+
+import (
+	health "github.com/aleksandarv/file-uploader/file-service/gen/health"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// HealthResponseBody is the type of the "health" service "health" endpoint
+// HTTP response body.
+type HealthResponseBody struct {
+	// Health status of the service
+	Status string `form:"status" json:"status" xml:"status"`
+}
+
+// HealthUnavailableResponseBody is the type of the "health" service "health"
+// endpoint HTTP response body for the "unavailable" error.
+type HealthUnavailableResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// HealthInternalErrorResponseBody is the type of the "health" service "health"
+// endpoint HTTP response body for the "internal_error" error.
+type HealthInternalErrorResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// NewHealthResponseBody builds the HTTP response body from the result of the
+// "health" endpoint of the "health" service.
+func NewHealthResponseBody(res *health.HealthResult) *HealthResponseBody {
+	body := &HealthResponseBody{
+		Status: res.Status,
+	}
+	return body
+}
+
+// NewHealthUnavailableResponseBody builds the HTTP response body from the
+// result of the "health" endpoint of the "health" service.
+func NewHealthUnavailableResponseBody(res *goa.ServiceError) *HealthUnavailableResponseBody {
+	body := &HealthUnavailableResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewHealthInternalErrorResponseBody builds the HTTP response body from the
+// result of the "health" endpoint of the "health" service.
+func NewHealthInternalErrorResponseBody(res *goa.ServiceError) *HealthInternalErrorResponseBody {
+	body := &HealthInternalErrorResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
